...
    <string name="get_started_info_2">Start the downloaded app where you\'ll see a mode selection screen.</string>
    <string name="clip_sync_modes">ClipSync modes</string>
    <string name="bluetooth" translatable="false">Bluetooth</string>
    <string name="network">Network</string>
    <string name="clip_sync_modes_info_1">You can use Bluetooth. Use this method if both your phone and computer has Bluetooth.</string>
    <string name="clip_sync_modes_info_2">Alternatively, the app can sync through the local network. Use this is your devices are on the same network (for example on the same WiFi).</string>
    <string name="clip_sync_remember_description">The app will remember your decision! You only need to select a mode again if you want to change it.</string>
    <string name="clip_sync_mode_not_selected">Tap on one of the icons to select a mode!</string>
    <string name="clip_sync_bluetooth_selected">BLUETOOTH selected! Make sure the desktop app is also on and you selected bluetooth there too.</string>
    <string name="clip_sync_network_selected">NETWORK selected! Make sure the desktop app is also on and you selected network there too.</string>
    <string name="bluetooth_not_supported">This device does not support Bluetooth! You can try to use the other ClipSync method.</string>
    <string name="using_bluetooth_clip_sync">Using Bluetooth ClipSync!</string>
    <string name="using_network_clip_sync">Using network ClipSync!</string>
    <string name="clip_sync_disable">Disable</string>
...
     <font color="#E65100">public static</font> <font color="#DF7401">void</font> <font color="#ADD8E6">main</font>(<font color="#999900">String</font>[] args) {
<br/>	&nbsp;&nbsp;&nbsp;&nbsp;<font color="#999900">System</font>.<font color="#ADD8E6">out</font>.<font color="#ADD8E6">println</font>(<font color="#2E8B57">&quot;ClipSync!&quot;</font>);
<br/>}
        ]]>
    </string>
    <string name="clip_sync_bluetooth_try_again">Bluetooth is on! Please try again now.</string>
    <string name="clip_sync_success">Synced with other device!</string>
    <string name="clip_sync_fail_time_out">ClipSync failed: time out.</string>
    <string name="clip_sync_fail">ClipSync failed!</string>
    <string name="clip_sync_bluetooth_cancelled">Must be turned on…</string>
    <string name="clip_sync_pairing">Pairing</string>
    <string name="clip_sync_pairing_info">Searching for nearby devices…</string>
    <string name="clip_sync_pairing_description">Bluetooth must find the ClipSync desktop app, which may take some time. This only needs to be performed once.</string>
    <string name="clip_sync_pairing_handshake">Desktop app found! Pairing…</string>
    <string name="clip_sync_not_paired">No paired app found. Please pair in the ClipSync menu!</string>
    <string name="clip_sync_misc_error">Could not locate desktop app! Make sure it\'s on, you selected Bluetooth mode, and that it\'s showing a green tick!</string>
    <string name="clip_sync_location">Bluetooth usage requires some permissions. Please allow them in the next dialog!</string>
    <string name="clip_sync_location_denied">Bluetooth needs permission!</string>
    <string name="scanning_device">Scanning device </string>
    <string name="clip_sync_open_on_computer">You should open this link on your computer! Do you want to open it here anyways?</string>

    <!-- Notification data -->
    <string name="notification_channel_name" translatable="false">LearnJava notification channel</string>
    <string name="notification_channel_description" translatable="false">…</string>
    <string name="notification_exam_ready">Exam ready</string>
    <string name="notification_exam_name_message">\'%1$s\' exam can now be started again!</string>
...
    <string name="mark_task_as_completed">Mark this task as completed</string>
    <string name="show_solution">Show solution</string>
    <string name="hide_solution">Hide solution</string>

    <!-- Chapter components -->
    <string name="code">CODE</string>
    <string name="copy_content">Copy content</string>
    <string name="copy_successful">Code copied to clipboard</string>
    <string name="copy_failed">Failed to copy code</string>
    <string name="advanced">ADVANCED:</string>
    <string name="close_chapter">Close chapter</string>
    <string name="image_component_desc">Image component</string>
    <string name="zoom_in">Zoom in</string>
...
