<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/drawer_layout_clip_sync_root"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fitsSystemWindows="true">

<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
...
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:textSize="@dimen/medium_text_size"
                    android:text="@string/get_started_info_1"/>

                <Button
                    android:id="@+id/clipSyncDownloadButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/download_link"
                    android:onClick="downloadButtonOnClick"
                    android:textAllCaps="false"
...
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/bluetoothIcon"
                        android:textSize="@dimen/medium_text_size"
                        android:text="@string/clip_sync_modes_info_1"/>

                    <ImageView
                        android:id="@+id/bluetoothIcon"
                        android:layout_width="wrap_content"
...
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/networkIcon"
                        android:textSize="@dimen/medium_text_size"
                        android:text="@string/clip_sync_modes_info_2"/>

                    <ImageView
                        android:id="@+id/networkIcon"
                        android:layout_width="wrap_content"
...
            </LinearLayout>

        </ScrollView>

        <!-- Loading indicator -->
        <ProgressBar
            android:id="@+id/loadingIndicator"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:visibility="gone" />
...
